--- a/site/blueprints/pages/collection.yml
+++ b/site/blueprints/pages/collection.yml
@@ -7,6 +7,10 @@ fields:
     type: files
     max: 1
   
+  cyanImage:
+    type: files
+    max: 1
+  
   introText:
     label: Intro text
     type: textarea
