--- a/site/blueprints/pages/collection.yml
+++ b/site/blueprints/pages/collection.yml
@@ -1,26 +1,27 @@
 title: Collection
 preset: page
 pages: false
+
 fields:
   
   cover:
     type: files
+    min: 1
     max: 1
-  
-  cyanImage:
-    type: files
-    max: 1
-  
+
   introText:
     label: Intro text
     type: textarea
+    required: true
   
   images1:
     type: files
+    required: true
   
   text1:
     label: Text 1
     type: textarea
+    required: true
 
   mood:
     type: files
@@ -31,3 +32,15 @@ fields:
 
   images2:
     type: files
+
+sidebar:
+  cyanImage:
+    headline: Cyan image
+    type: files
+    template: cyan
+    min: 1
+    # max: 1
+
+  images:
+    type: files
+  
