--- a/site/blueprints/pages/post.yml
+++ b/site/blueprints/pages/post.yml
@@ -9,9 +9,8 @@ fields:
     min: 1
     max: 1
 
-  images:
+  postImages:
     type: files
-    required: true
   
   text:
     label: Text
@@ -20,7 +19,8 @@ fields:
 
   postDate:
     label: Date
-    type: text
+    type: date
+    default: now
     required: true
 
   tags:
