added moodboard title --- changed 2 col images layout --- added img captions

--- a/site/blueprints/files/default.yml
+++ b/site/blueprints/files/default.yml
@@ -2,3 +2,10 @@ title: Default images
 accept:
   maxsize: 2000000
   maxwidth: 4000
+
+fields:
+
+  text:
+    label: Small text below the image (only for collection page)
+    type: text
+    help: If empty, no text is displayed
